# ASCII-Architect

./: .gitignore  IA-context.md  README.md  ROADMAP.txt  estructura-de-carpetas.txt  logica_del_motor.txt  output.txt  pyproject.toml  requirements.txt
datasets/: dataset_boxes.jsonl  dataset_cylinders.jsonl  factory_arrows.py  factory_boxes.py  factory_cylinders.py  factory_diamonds.py  factory_soft_boxes.py
docs/: IA-context.md  ROADMAP.txt  estructura-de-carpetas.txt  research_log_00.txt
notebooks/: ascii-architect-00.ipynb  factory_cylinders-diamods-softboxes.ipynb  v1-cuadrados-y-flechas.ipynb
research/datasets/: dataset_arrows.jsonl  dataset_soft_boxes.jsonl
research/logs/: research_log_01.txt  research_log_02.txt
research/notebooks/: v1-rombos-y-cilindros.ipynb
scripts/: engine.py
src/: cli.py  engine.py  main.py  router.py  verify_diamond_custom.py
src/ascii_architect/: canvas.py  cli.py  narrator.py  neural_engine.py  renderers.py  router.py  scanner.py  utils.py
src/ascii_architect/utils/: __init__.py
tests/: test_renderers.py  test_router_mock.py
