[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-architect"
version = "1.0.0"
description = "The Neural-Symbolic Diagram Generator for the Terminal"
readme = "README.md"
authors = [
  { name = "Coxibius", email = "tu_email@example.com" },
]
requires-python = ">=3.9"
dependencies = [
    "typer",
    "colorama",
    "rich",
    "torch",
    "transformers",
]

[project.scripts]
# ESTA ES LA MAGIA:
# Crea el comando 'ascii-arch' y lo conecta a tu función main
ascii-arch = "ascii_architect.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
